[tool.poetry]
name = "pubmed-paper-fetcher-varunsingh3000"
version = "0.1.1"
description = "Fetch PubMed papers with non-academic authors from pharma/biotech companies"
authors = ["Varun Singh"]
readme = "README.md"
packages = [{ include = "pubmed_fetcher" }]
license = "MIT"
homepage = "https://github.com/varunsingh3000/pubmed_paper_fetcher"
repository = "https://github.com/varunsingh3000/pubmed_paper_fetcher"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
rapidfuzz = "^3.13.0"

[tool.poetry.scripts]
get-papers-list = "cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"